# solomon_flexbe_states

solomon_behaviors/: README.md
solomon_behaviors/solomon_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
solomon_behaviors/solomon_flexbe_behaviors/manifest/: example_behavior.xml
solomon_behaviors/solomon_flexbe_behaviors/src/solomon_flexbe_behaviors/: example_behavior_sm.py
solomon_behaviors/solomon_flexbe_states/: CMakeLists.txt  package.xml  setup.py
solomon_behaviors/solomon_flexbe_states/src/solomon_flexbe_states/: capture_3d_state.py  clear_octomap.py  get_2D_image_state.py  get_detected_object_state.py
