<package>
  <name>solomon_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     solomon_flexbe_states provides a collection of custom states.
     Feel free to add new states.
  </description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>  
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>flexbe_core</run_depend>
  
  <export>
    <flexbe_states />
  </export>

</package>
